CHT-277: Implementation